Fixed app getting scrollbar because of mobile ui

--- a/client/src/scss/components/_menu.scss
+++ b/client/src/scss/components/_menu.scss
@@ -4,7 +4,7 @@
     position: absolute;
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     justify-content: center;
     align-items: center;
     container-name: menu;
