--- a/client/src/scss/components/_spinner.scss
+++ b/client/src/scss/components/_spinner.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background: var(--background);
     top: 0;
     left: 0;
